--- a/config/config.yml
+++ b/config/config.yml
@@ -1,3 +1,3 @@
-project_id: 'arun-genai-bb'
-credentials_json: './credentials/key.json'
-doc_search_bucket: 'moodys-doc-search'
+project_id: arun-genai-bb
+credentials_json: ./credentials/key.json
+doc_search_bucket: moodys-doc-search
