--- a/config/config.yml
+++ b/config/config.yml
@@ -2,6 +2,6 @@ project_id: arun-genai-bb
 credentials_json: ./credentials/key.json
 doc_search_bucket: moodys-doc-search
 data_store_id: moodys-doc-search-11
-display_name: moodys-doc-search-11
-input_gcs_uri: gs://moodys-doc-search/metadata.jsonl'
-errors_gcs_uri: gs://moodys-doc-search-errors/'
+data_store_display_name: moodys-doc-search-11
+gcs_input_uri: gs://moodys-doc-search/metadata.jsonl'
+gcs_errors_uri: gs://moodys-doc-search-errors/'
